--- a/styles.css
+++ b/styles.css
@@ -102,3 +102,20 @@ input, select {
     background-color: #f44336;
     color: white;
 }
+
+/* Pfeil zum Seitenanfang */
+.scroll-top-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+.scroll-top-button:hover {
+    background-color: #45a049;
+}
