--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #0078D4;
+    background-color: #ee0000;
     color: white;
     padding: 10px;
     display: flex;
@@ -49,7 +49,7 @@ section {
 
 #auth-section button {
     padding: 10px 20px;
-    background-color: #0078D4;
+    background-color: #ee0000;
     color: white;
     border: none;
     border-radius: 5px;
