--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,41 @@ section {
     background-color: #bbbbbb;
 }
 
+/* Styling für das Dropdown-Menü */
+select {
+    margin: 2px 5px;
+    padding: 5px 10px;
+    background-color: #dddddd;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    outline: none;
+}
+
+/* Hover-Effekt für das Dropdown */
+select:hover {
+    background-color: #bbbbbb;
+}
+
+/* Styling für das ausgewählte Element im Dropdown */
+select:focus {
+    background-color: #ee0000;
+    color: white;
+    border: 1px solid #000000;
+}
+
+/* Styling für die Optionen innerhalb des Dropdowns */
+option {
+    background-color: #ffffff;
+    color: black;
+}
+
+/* Option Hover-Effekt */
+option:hover {
+    background-color: #f1f1f1;
+}
+
 footer {
     position: fixed;
     bottom: 20px;
