--- a/styles.css
+++ b/styles.css
@@ -164,7 +164,7 @@ footer:hover {
 .scroll-button button {
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #007bff;
+    background-color: #dddddd;
     color: white;
     border: none;
     border-radius: 5px;
@@ -172,5 +172,5 @@ footer:hover {
 }
 
 .scroll-button button:hover {
-    background-color: #0056b3;
+    background-color: #ee0000;
 }
