--- a/styles.css
+++ b/styles.css
@@ -193,8 +193,13 @@ footer:hover {
 .additional-point .checkbox-group {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .checkbox-group label {
     margin-right: 5px;
+}
+
+.checkbox-group input {
+    margin-right: 15px;
 }
