--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,7 @@ footer:hover {
 }
 
 .additional-points-container {
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
 }
 
